# e-clawhisper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.infra.yml  config.yaml  pyproject.toml
packaging/: build.sh  config.yaml  env.default  nfpm.yaml
packaging/scripts/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
packaging/systemd/: e-clawhisper.service  e-heed.service
src/e_clawhisper/: __init__.py  health.py  main.py
src/e_clawhisper/adapters/: stt.py  tts.py
src/e_clawhisper/channels/: base.py  openfang.py
src/e_clawhisper/cli/: main.py
src/e_clawhisper/cli/commands/: config.py  session.py
src/e_clawhisper/core/: logger.py  settings.py
src/e_clawhisper/daemon/: orchestrator.py  server.py
src/e_clawhisper/daemon/adapters/: agent.py  audio.py  llm.py  stt.py  tts.py
src/e_clawhisper/daemon/adapters/agent/: base.py  generic.py  openfang.py
src/e_clawhisper/daemon/adapters/agents/: openfang.py
src/e_clawhisper/daemon/adapters/stt/: whisper_live.py  whisperlive.py
src/e_clawhisper/daemon/adapters/tts/: kokoro.py  piper.py
src/e_clawhisper/daemon/core/: models.py
src/e_clawhisper/daemon/core/interfaces/: agent.py  processor.py  stt.py  tts.py
src/e_clawhisper/daemon/core/processors/: turn_manager.py  vad.py  wake_word.py
src/e_clawhisper/daemon/pipeline/: manager.py  runner.py  states.py
src/e_clawhisper/daemon/sentinel/: pipeline.py  vad.py  wakeword.py
src/e_clawhisper/daemon/turn/: pipeline.py  vad.py
src/e_clawhisper/sessions/: voice.py
src/e_clawhisper/shared/: logger.py  settings.py
src/e_clawhisper/shared/operational/: audio_device.py  buffer.py  events.py  exceptions.py
src/e_heed/: health.py  main.py
src/e_heed/cli/: main.py
src/e_heed/cli/commands/: config.py  run.py  sentinel.py  session.py
src/e_heed/daemon/: orchestrator.py  server.py
src/e_heed/daemon/adapters/: audio.py  base.py
src/e_heed/daemon/adapters/agent/: generic.py  openfang.py
src/e_heed/daemon/adapters/stt/: base.py  evoice.py  whisperlive.py
src/e_heed/daemon/adapters/tts/: base.py  evoice.py  kokoro.py  piper.py
src/e_heed/daemon/sentinel/: pipeline.py  vad.py  wakeword.py
src/e_heed/daemon/turn/: pipeline.py  vad.py
src/e_heed/shared/: logger.py  settings.py
src/e_heed/shared/operational/: exceptions.py
tests/: conftest.py
tests/integration/daemon/: test_streaming_pipeline.py
tests/integration/daemon/adapters/agents/: test_openfang_conversation.py
tests/integration/daemon/adapters/stt/: test_evoice_transcription.py  test_whisperlive_transcription.py
tests/integration/daemon/adapters/tts/: test_evoice_synthesis.py  test_kokoro_synthesis.py  test_piper_synthesis.py
tests/notebook/: automatic_vad_model_training.ipynb
tests/scripts/: sentinel.py  test_agents_openfang.py
tests/scripts/eager/: eager_config.yaml
tests/unit/: conftest.py  test_audio_adapter.py  test_buffer.py  test_channels.py  test_cli_run.py  test_cli_sentinel.py  test_daemon_server.py  test_events.py  test_evoice_stt_adapter.py  test_evoice_tts_adapter.py  test_exceptions.py  test_generic_adapter.py  test_health.py  test_kokoro_adapter.py  test_logger.py  test_logger_extended.py  test_openfang_adapter.py  test_orchestrator.py  test_pipeline_idle.py  test_pipeline_states.py  test_piper_adapter.py  test_sentence_splitter.py  test_sentinel_pipeline.py  test_settings.py  test_silero_vad.py  test_streaming_pipeline.py  test_turn_pipeline_run.py  test_vad_processor.py  test_wake_word.py  test_wakeword.py  test_whisperlive_adapter.py
