[build-system]
requires = ["hatchling>=1.24", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "e-clawhisper"
dynamic = ["version"]
description = "Always-on voice channel: wake-word detection → STT → AgentOS → TTS bridge"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Eager", email = "dev@eager.dev" }]
keywords = ["voice", "stt", "tts", "vad", "wake-word", "livekit", "agents", "openfang"]

dependencies = [
    "livekit-agents[silero]~=1.3",
    "httpx>=0.28.1",
    "websockets>=12.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "orjson>=3.10.0",
    "structlog>=25.0.0",
    "wyoming>=1.8.0",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "numpy>=2.0.0",
]

[project.scripts]
clawhisper = "e_clawhisper.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.0",
    "pre-commit>=4.4.0",
    "ty>=0.0.5",
    "respx>=0.22.0",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/e_clawhisper"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["e_clawhisper"]

[tool.ty.environment]
python-version = "3.13"
root = ["./src/e_clawhisper"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
unresolved-import = "error"
