[build-system]
requires = ["hatchling>=1.24", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "e-heed"
dynamic = ["version"]
description = "Always-on voice daemon: wake-word → STT → Agent → TTS desktop bridge powered by e-voice"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Eager", email = "dev@eager.dev" }]
keywords = ["voice", "stt", "tts", "vad", "wake-word", "daemon", "e-voice", "evoice", "silero", "heed"]

dependencies = [
    "cyclopts>=3.6.0",
    "websockets>=12.0",
    "wyoming>=1.8.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "orjson>=3.10.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "structlog>=25.0.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.0",
    "rich>=14.0.0",
    "onnxruntime>=1.24.0",
    "openwakeword>=0.4.0",
    "silero-vad>=6.2.1",
    "pydantic-ai>=1.67.0",
    "ovld>=0.5.14",
]

[project.scripts]
eheed = "e_heed.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.0",
    "pre-commit>=4.4.0",
    "ty>=0.0.5",
    "pytest-cov>=7.0.0",
    "pytest-audioeval>=0.1.3",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/e_heed"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--import-mode=importlib -m 'not slow'"
markers = ["slow: tests that hit real external services (run with: uv run pytest -m slow)"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["e_heed"]

[tool.ty.environment]
python-version = "3.13"
root = ["./src/e_heed"]

[tool.ty.rules]
possibly-unresolved-reference = "error"
unresolved-import = "error"

